Fix spacing issue with the Clock

--- a/src/components/panels/TopMenu.css
+++ b/src/components/panels/TopMenu.css
@@ -17,6 +17,7 @@
     right:  0px;
     height: 40px;
     vertical-align: top;
+    margin-right: 15px;
 }
   
 .TopMenu > .header-application-name {
